# bbot

./: .flake8  .gitattributes  .gitignore  .gitmodules  .test  404.html  Dockerfile  README.md  asset-inventory.csv  asset-inventory.json  bbot-docker.ps1  bbot-docker.sh  bbot.conf  bbot.sh  codecov.yml  convert.py  dependabot.yml  index.html  lint-tests.sh  mkdocs.yml  objects.inv  output.ndjson  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml  versions.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: black.yml  distro_tests.yml  docs.yml  docs_updater.yml  lint.yml  pypi.yml  tests.yml  version_updater.yaml
1.x/: 404.html  index.html  sitemap.xml
1.x/assets/stylesheets/: extra-style.ri1q7ryr.min.css  extra-style.ri1q7ryr.min.css.map
1.x/comparison/: index.html
1.x/contribution/: index.html
1.x/data/chord_graph/: entities.json
1.x/dev/: index.html
1.x/dev/basemodule/: index.html
1.x/dev/event/: index.html
1.x/dev/helpers/: index.html
1.x/dev/scanner/: index.html
1.x/how_it_works/: index.html
1.x/release_history/: index.html
1.x/scanning/: index.html
1.x/site/: index.html  sitemap.xml
1.x/troubleshooting/: index.html
Dev/: 404.html  favicon.png-autosave.kra  index.html  objects.inv  sitemap.xml
Dev/comparison/: index.html
Dev/contribution/: index.html
Dev/dev/: index.html
Dev/how_it_works/: index.html
Dev/release_history/: index.html
Dev/scanning/: index.html
Dev/search/: search_index.json
Dev/troubleshooting/: index.html
Stable/: 404.html  index.html  objects.inv  sitemap.xml
Stable/comparison/: index.html
Stable/contribution/: index.html
Stable/dev/: index.html
Stable/how_it_works/: index.html
Stable/release_history/: index.html
Stable/scanning/: index.html
Stable/search/: search_index.json
Stable/site/: 404.html
Stable/troubleshooting/: index.html
api/: README.md  api.py  db.py  import_json.py  neo4j_import.py  test_scan.json
api-drf/: .gitignore  docker-compose.yml
api-drf/django/: Dockerfile  db.sqlite3  manage.py  requirements.txt
api-drf/nginx/: nginx.conf  proxy.template  site.template
api-drf/react/: .env  .gitignore  Dockerfile  ISSUE_TEMPLATE.md  README.md  jsconfig.json  package.json
assets/stylesheets/: extra-style.1dhok9lu.min.css  extra-style.1dhok9lu.min.css.map
bbot/: __init__.py  cli.py  config.yaml  defaults.conf  defaults.yml  errors.py  logger.py
bbot/agent/: __init__.py  agent.py  messages.py
bbot/core/: __init__.py  core.py  engine.py  errors.py  flags.py  helpers.py  modules.py  regexes.py  shared_deps.py  target.py  threadpool.py
bbot/db/: neo4j.py
bbot/modules/: __init__.py  affiliates.py  ajaxpro.py  anubisdb.py  apkpure.py  asn.py  aspnet_viewstate.py  azure_realm.py  azure_tenant.py  baddns.py  baddns_direct.py  baddns_zone.py  badsecrets.py  base.py  bevigil.py  binaryedge.py  blind_ssrf.py  bucket_amazon.py  bucket_aws.py  bucket_azure.py  bucket_digitalocean.py  bucket_enum.py  bucket_file_enum.py  bucket_firebase.py  bucket_gcp.py  bucket_google.py  bufferoverrun.py  builtwith.py  builtwithDomains.py  builtwithRedirects.py  burpsuite.py  bypass403.py  c99.py  censys.py  certspotter.py  chaos.py  code_repository.py  columbus.py  cookie_brute.py  credshed.py  (+111 more)
bbot/presets/: baddns-thorough.yml  cloud-enum.yml  code-enum.yml  email-enum.yml  kitchen-sink.yml  secrets-enum.yml  spider.yml  subdomain-enum.yml  web-basic.yml  web-screenshots.yml  web-thorough.yml
bbot/scanner/: __init__.py  dispatcher.py  manager.py  scanner.py  stats.py  target.py
bbot/scripts/: docs.py  gen_chord_data.py
bbot/test/: bbot_fixtures.py  conftest.py  coverage.cfg  helpers.py  modules_test_classes.py  patches.py  pytest.ini  run_tests.sh  scan.py  test.conf  test_2_bbot.py  test_bbot.py  test_init.py  test_modules_full.py  test_output.json  test_output.ndjson  test_step_1_modules_full.py  testsslcert.pem  testsslkey.pem
bbot/wordlists/: devops_mutations.txt  interesting_urls.txt  ms_on_prem_subdomains.txt  nameservers.txt  paramminer_headers.txt  paramminer_parameters.txt  raft-small-extensions-lowercase_CLEANED.txt  top_open_ports_nmap.txt  valid_url_schemes.txt  wfuzz_shortname_candidates.txt
comparison/: index.html
contribution/: index.html
dev/: index.html
dev/basemodule/: index.html
dev/event/: index.html
dev/helpers/: index.html
dev/scanner/: index.html
dev_branch/: 404.html  index.html  sitemap.xml
dev_branch/comparison/: index.html
dev_branch/contribution/: index.html
dev_branch/dev/: index.html
dev_branch/diagrams/: event-flow.drawio
dev_branch/how_it_works/: index.html
dev_branch/release_history/: index.html
dev_branch/scanning/: index.html
dev_branch/search/: search_index.json
dev_branch/troubleshooting/: index.html
docs/: comparison.md  contribution.md  how_it_works.md  index.md  modules.md  release_history.md  troubleshooting.md  usage.md
docs/advanced/: index.md
docs/configuration/: index.md  module_options.md
docs/contribution/: index.md  module_creation.md
docs/dev/: architecture.md  basemodule.md  core.md  dev_environment.md  discord_bot.md  engine.md  event.md  index.md  module_howto.md  presets.md  scanner.md  target.md  tests.md
docs/diagrams/: engine-architecture.drawio  module-recursion.drawio
docs/modules/: custom_yara_rules.md  flags.md  index.md  internal_modules.md  list_of_modules.md  nuclei.md
docs/scanning/: advanced.md  configuration.md  events.md  index.md  list_of_modules.md  modules_table.md  output.md  presets.md  presets_list.md  tips_and_tricks.md
docs/stylesheets/: extra.css
examples/: discord_bot.py
extra_sass/: style.css.scss
how_it_works/: index.html
modules/list_of_modules/: index.html
modules/nuclei/: index.html
release_history/: index.html
scanning/: index.html
scanning/advanced/: index.html
scanning/configuration/: index.html
scanning/events/: index.html
scanning/output/: index.html
scanning/tips_and_tricks/: index.html
search/: search_index.json
troubleshooting/: index.html
(+834 files in other folders)
