[tool.poetry]
name = "bbot"
version = "1.0.3"
description = "OSINT automation for hackers."
authors = [
    "TheTechromancer",
    "Paul Mueller",
]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/blacklanternsecurity/bbot"
homepage = "https://github.com/blacklanternsecurity/bbot"
documentation = "https://www.blacklanternsecurity.com/bbot/"
keywords = ["python", "cli", "automation", "osint", "neo4j", "scanner", "python-library", "hacking", "recursion", "pentesting", "recon", "command-line-tool", "bugbounty", "subdomains", "security-tools", "subdomain-scanner", "osint-framework", "attack-surface", "subdomain-enumeration", "osint-tool"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
]

[tool.poetry.urls]
"Discord" = "https://discord.com/invite/PZqkgxu5SA"
"Docker Hub" = "https://hub.docker.com/r/blacklanternsecurity/bbot"

[tool.poetry.scripts]
bbot = 'bbot.cli:main'

[tool.poetry.dependencies]
python = "^3.9"
omegaconf = "^2.3.0"
psutil = "^5.9.4"
wordninja = "^2.0.0"
ansible-runner = "^2.3.2"
deepdiff = "^6.2.3"
xmltojson = "^2.0.2"
pycryptodome = "^3.17"
idna = "^3.4"
ansible = "^7.3.0"
tabulate = "0.8.10"
websockets = "^11.0.2"
pyjwt = "^2.7.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
dnspython = "^2.4.2"
aioconsole = "^0.6.2"
pydantic = "^2.4.2"
httpx = "^0.26.0"
cloudcheck = "^2.1.0.181"
pytest-httpx = "^0.28.0"
tldextract = "^5.1.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"
poetry-dynamic-versioning = "^0.21.4"
pytest-rerunfailures = "^11.1.2"
pytest-asyncio = "^0.21.0"
urllib3 = "^2.0.2"
werkzeug = "^2.3.4"
pytest-httpserver = "^1.0.8"
pytest-env = "^0.8.2"
pytest-timeout = "^2.1.0"
pytest = "^7.4.0"
pre-commit = "^3.4.0"
black = "24.1.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.2"
mkdocs-extra-sass-plugin = "^0.1.0"
mkdocs-material = "^9.2.5"
mkdocs-material-extensions = "^1.1.1"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.6.0"
livereload = "^2.6.3"

[tool.pytest.ini_options]
env = [
    "BBOT_TESTING = True",
    "PYTHONASYNCIODEBUG = 1"
]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 119
extend-exclude = "(test_step_1/test_manager_*)"

[tool.poetry-dynamic-versioning]
enable = true
metadata = false
format-jinja = 'v1.1.5{% if branch == "dev" %}.{{ distance }}rc{% endif %}'

[tool.poetry-dynamic-versioning.substitution]
files = ["*/__init__.py"]
