[tool.poetry]
name = "bbot"
version = "2.0.0"
description = "OSINT automation for hackers."
authors = [
    "TheTechromancer",
    "Paul Mueller",
]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/blacklanternsecurity/bbot"
homepage = "https://github.com/blacklanternsecurity/bbot"
documentation = "https://www.blacklanternsecurity.com/bbot/"
keywords = ["python", "cli", "automation", "osint", "neo4j", "scanner", "python-library", "hacking", "recursion", "pentesting", "recon", "command-line-tool", "bugbounty", "subdomains", "security-tools", "subdomain-scanner", "osint-framework", "attack-surface", "subdomain-enumeration", "osint-tool"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
]

[tool.poetry.urls]
"Discord" = "https://discord.com/invite/PZqkgxu5SA"
"Docker Hub" = "https://hub.docker.com/r/blacklanternsecurity/bbot"

[tool.poetry.scripts]
bbot = 'bbot.cli:main'

[tool.poetry.dependencies]
python = "^3.9"
omegaconf = "^2.3.0"
psutil = "^5.9.4"
wordninja = "^2.0.0"
ansible-runner = "^2.3.2"
deepdiff = ">=6.2.3,<8.0.0"
xmltojson = "^2.0.2"
pycryptodome = "^3.17"
idna = "^3.4"
ansible = ">=7.3,<9.0"
tabulate = "0.8.10"
websockets = ">=11.0.2,<13.0.0"
pyjwt = "^2.7.0"
beautifulsoup4 = "^4.12.2"
lxml = ">=4.9.2,<6.0.0"
dnspython = "^2.4.2"
pydantic = "^2.4.2"
tldextract = "^5.1.1"
cachetools = "^5.3.2"
socksio = "^1.0.0"
jinja2 = "^3.1.3"
regex = "^2024.4.16"
unidecode = "^1.3.8"
radixtarget = "^1.0.0.15"
cloudcheck = "^5.0.0.350"
mmh3 = "^4.1.0"
setproctitle = "^1.3.3"
yara-python = "^4.5.1"
pyzmq = "^26.0.3"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
flake8 = ">=6,<8"
poetry-dynamic-versioning = ">=0.21.4,<1.3.0"
urllib3 = "^2.0.2"
werkzeug = ">=2.3.4,<4.0.0"
pytest-env = ">=0.8.2,<1.2.0"
pre-commit = "^3.4.0"
black = "^24.1.1"
pytest-cov = "^5.0.0"
pytest-rerunfailures = "^14.0"
pytest-timeout = "^2.3.1"
pytest-httpx = "^0.30.0"
pytest-httpserver = "^1.0.11"
pytest = "^8.3.1"
pytest-asyncio = "^0.23.8"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.2"
mkdocs-extra-sass-plugin = "^0.1.0"
mkdocs-material = "^9.2.5"
mkdocs-material-extensions = "^1.1.1"
mkdocstrings = ">=0.22,<0.26"
mkdocstrings-python = "^1.6.0"
livereload = "^2.6.3"
mike = "^2.1.2"

[tool.pytest.ini_options]
env = [
    "BBOT_TESTING = True",
]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 119
extend-exclude = "(test_step_1/test_manager_*)"

[tool.poetry-dynamic-versioning]
enable = true
metadata = false
format-jinja = 'v2.0.0{% if branch == "dev" %}.{{ distance }}rc{% endif %}'

[tool.poetry-dynamic-versioning.substitution]
files = ["*/__init__.py"]
